# pyrobability

./: .pre-commit-config.yaml  pyproject.toml
pyrobability/: __init__.py  abcs.py  experiments.py  main.py  manager.py  outcomes.py  types.py
tests/: test_basic.py  test_coin.py  test_dice.py  test_experiments.py  test_random_variable.py  test_selection.py
